force-app/main/default/objects/animalos__Vet_Consult__c/animalos__Vet_Consult__c.object-meta.xml
<CustomObject>
    <label>Vet Consult</label>
    <nameField>
        <displayFormat>VC{00000}</displayFormat>
        <label>Vet Consult ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vet Consults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>