force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Animal__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Vet Consults</relationshipLabel>
    <relationshipName>Vet_Consults</relationshipName>
    <type>Lookup</type>
</CustomField>