force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Consult_Location__c.field-meta.xml
<CustomField>
    <fullName>animalos__Consult_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consult Location</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Vet Consults</relationshipLabel>
    <relationshipName>Vet_Consults</relationshipName>
    <type>Lookup</type>
</CustomField>