force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Date_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Time_Completed__c</fullName>
    <label>Date/Time Completed</label>
    <type>DateTime</type>
</CustomField>