force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Parent_Vet_Consult__c.field-meta.xml
<CustomField>
    <fullName>animalos__Parent_Vet_Consult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Vet Consult</label>
    <referenceTo>animalos__Vet_Consult__c</referenceTo>
    <relationshipLabel>Vet Consults</relationshipLabel>
    <relationshipName>Vet_Consults</relationshipName>
    <type>Lookup</type>
</CustomField>