force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>animalos__Priority_Flag__c</fullName>
    <formula>IF(
            ISPICKVAL( animalos__Priority__c , &apos;High&apos;),
            IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/red.png&quot;, &apos;High&apos;, 25, -1),
            IF(
            ISPICKVAL( animalos__Priority__c , &apos;Medium&apos;),
            IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/orange.png&quot;, &apos;Medium&apos;, 25, -1),
            IF(
            ISPICKVAL( animalos__Priority__c , &apos;Low&apos;),
            IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/default.png&quot;, &apos;Low&apos;, 25, -1),
                &apos;&apos;
        )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>