force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Recheck_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Recheck_Date__c</fullName>
    <label>Recheck Date</label>
    <type>Date</type>
</CustomField>