force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Recheck_Due__c.field-meta.xml
<CustomField>
    <fullName>animalos__Recheck_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recheck Due</label>
    <type>Checkbox</type>
</CustomField>