force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Resource__c.field-meta.xml
<CustomField>
    <fullName>animalos__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>animalos__Resource__c</referenceTo>
    <relationshipLabel>Vet Consults</relationshipLabel>
    <relationshipName>Vet_Consults</relationshipName>
    <type>Lookup</type>
</CustomField>