force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>animalos__Scheduled_End__c</fullName>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>