force-app/main/default/objects/animalos__Vet_Consult__c/fields/animalos__Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>animalos__Scheduled_Start__c</fullName>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>