force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Abdomen__c.field-meta.xml
<CustomField>
    <fullName>aos_Abdomen__c</fullName>
    <label>Abdomen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>