force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Abdomen_Coelom_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Abdomen_Coelom_Comments__c</fullName>
    <label>Abdomen/Coelom Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>