force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Abdominal_Tap__c.field-meta.xml
<CustomField>
    <fullName>aos_Abdominal_Tap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abdominal Tap</label>
    <type>Checkbox</type>
</CustomField>