force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Alt_Care_Options_Assessed__c.field-meta.xml
<CustomField>
    <fullName>aos_Alt_Care_Options_Assessed__c</fullName>
    <inlineHelpText>Have adoption, foster, rescue, and alternative treatment options been assessed?</inlineHelpText>
    <label>Alt Care Options Assessed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not suitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>