force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Anaesthesia__c.field-meta.xml
<CustomField>
    <fullName>aos_Anaesthesia__c</fullName>
    <label>Anaesthesia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>