force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Animal_Current_QOL__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Current_QOL__c</fullName>
    <label>Animal Current QOL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Suboptimal</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>