force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Animal_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Location__c</fullName>
    <formula>animalos__Animal__r.animalos__Row_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Location</label>
    <type>Text</type>
</CustomField>