force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Base_Excess_BE__c.field-meta.xml
<CustomField>
    <fullName>aos_Base_Excess_BE__c</fullName>
    <label>Base Excess (BE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>