force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Beak__c.field-meta.xml
<CustomField>
    <fullName>aos_Beak__c</fullName>
    <label>Beak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>