force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>aos_Behaviour__c</fullName>
    <label>Behaviour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>