force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Beta_actin_control_temperature__c.field-meta.xml
<CustomField>
    <fullName>aos_Beta_actin_control_temperature__c</fullName>
    <label>Beta-actin control temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>inconclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>