force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Bicarbonate_HCO3__c.field-meta.xml
<CustomField>
    <fullName>aos_Bicarbonate_HCO3__c</fullName>
    <label>Bicarbonate (HCO3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>