force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Bladder__c.field-meta.xml
<CustomField>
    <fullName>aos_Bladder__c</fullName>
    <label>Bladder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Mildly Thickened</fullName>
            </value>
            <value>
                <fullName>Moderately Thickened</fullName>
            </value>
            <value>
                <fullName>Severely Thickened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>