force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Blood_Smear__c.field-meta.xml
<CustomField>
    <fullName>aos_Blood_Smear__c</fullName>
    <label>Blood Smear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>