force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Bone_Marrow__c.field-meta.xml
<CustomField>
    <fullName>aos_Bone_Marrow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bone Marrow</label>
    <type>Checkbox</type>
</CustomField>