force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Bone_Marrow_Detail__c.field-meta.xml
<CustomField>
    <fullName>aos_Bone_Marrow_Detail__c</fullName>
    <label>Bone Marrow Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>