force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Brief_Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>aos_Brief_Case_Summary__c</fullName>
    <label>Brief Case Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>