force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Ca__c.field-meta.xml
<CustomField>
    <fullName>aos_Ca__c</fullName>
    <label>Ca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>