force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Cardiovascular_Heart__c.field-meta.xml
<CustomField>
    <fullName>aos_Cardiovascular_Heart__c</fullName>
    <label>Cardiovascular/Heart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>