force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Castration__c.field-meta.xml
<CustomField>
    <fullName>aos_Castration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Castration</label>
    <type>Checkbox</type>
</CustomField>