force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>aos_Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>animalos__Vet_Consult__c</referenceTo>
    <relationshipLabel>Vet Consults (Cloned From)</relationshipLabel>
    <relationshipName>aos_Vet_Consults</relationshipName>
    <type>Lookup</type>
</CustomField>