force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Coat_and_Nail_Condition__c.field-meta.xml
<CustomField>
    <fullName>aos_Coat_and_Nail_Condition__c</fullName>
    <label>Coat and Nail Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>