force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Complete_Clip_Down_Required__c.field-meta.xml
<CustomField>
    <fullName>aos_Complete_Clip_Down_Required__c</fullName>
    <label>Complete Clip Down Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>