force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Condition_Summary__c.field-meta.xml
<CustomField>
    <fullName>aos_Condition_Summary__c</fullName>
    <inlineHelpText>Approximately how long has each condition been present and how long has each condition needed treatment (include reasons that support these estimates)?</inlineHelpText>
    <label>Condition Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>