force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_conj_ve__c.field-meta.xml
<CustomField>
    <fullName>aos_conj_ve__c</fullName>
    <label>conj ve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>inconclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>