force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Consult_Reason_SB__c.field-meta.xml
<CustomField>
    <fullName>aos_Consult_Reason_SB__c</fullName>
    <label>Consult Reason SB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>