force-app/main/default/objects/animalos__Vet_Consult__c/fields/aos_Demeanour__c.field-meta.xml
<CustomField>
    <fullName>aos_Demeanour__c</fullName>
    <label>Demeanour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QAR</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>Obtunded</fullName>
            </value>
            <value>
                <fullName>Dull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>